--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
                 <hr>
                 <ul class="progress-list">
 				   <li>
-                        <label class="left-label" title="感兴趣且研究生方向">声纹识别</label>
+                        <label class="left-label" title="交流能力">热爱表达、跨部门协作、客户现场验收</label>
                         <progress value="70" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label"  title="熟练且大学以来一直从事">全栈开发</label>
+                        <label class="left-label"  title="爱好">徒步、极限运动</label>
                         <progress value="90" max="100"></progress>
                     </li>
                     <li>
-                        <label class="left-label"  title="面向对象编码能力">编码、社区</label>
+                        <label class="left-label"  title="拓展技术能力">GitHub，StackOverFlow</label>
                         <progress value="95" max="100"></progress>
                     </li>
                  
@@ -79,13 +79,13 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">Vue、jQuery</span></li>
+                        <label class="left-label"  title="系统性">架构设计</label><span class="label-value"></span></li>
                     </li>
                     <li>
-                        <label class="left-label">后端</label><span class="label-value">Spring、SpringBoot、SpringCloud</span></li>
+                        <label class="left-label"  title="结构性">前/后端</label><span class="label-value">Vue、jQuery/Spring、SpringBoot、SpringCloud</span></li>
                     </li>
                     <li>
-                        <label class="left-label">数据库</label><span class="label-value">Redis、Postgres、Mongo、Mysql、Oracle</span></li>
+                        <label class="left-label"  title="数据">数据库</label><span class="label-value">Redis、Mysql、Oracle</span></li>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
             <div class="code info-unit">
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
-                <div class="weixin">
+                <div class="VX">
                     <img src="static/image/weixin.png" alt="">
 
                 </div>
@@ -113,16 +113,16 @@
                     <li>
 		      <h3>哈尔滨理工大学 - 计算机科学与技术专业（研究生）2023-2026</h3>
                         <p>
-                         <b>研究生课题：说话人确认（speaker verification）<br>
-                           卷积神经网络（CNN），图卷积神经网络（CNN），Transformer，具体：大模型（wavlm，hubert，wav2vec），单体架构（ecapa，ecapa2，pcf，ska）</b>
+                         <b>研究生课题：说话人确认（speaker verification，SV）<br>
+                           轻量化架构设计，卷积神经网络（CNN），图卷积神经网络（GCN），Transformer，大模型（如WavLM，DeepSeek）</b>
                         </p>
                     </li>
                 </ul>
 				<ul class="experience-list">
                     <li>
-                        <h3>工作经历 - 计算机软件 2019-2023</h3>
+                        <h3>工作经历 - 计算机软件开发 2019-2023</h3>
                         <p>
-                           <b>电子商务软件，医疗软件，财务软件</b>
+                           <b>Vue，Spring MVC/Spring Boot，Redis， Oracle/Mysql</b>
                         </p>
                     </li>
                 </ul>
