--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label"  title="系统性">架构设计</label><span class="label-value"></span></li>
+                        <label class="left-label"  title="系统性">架构设计</label><span class="label-value">30%</span></li>
                     </li>
                     <li>
                         <label class="left-label"  title="结构性">前/后端</label><span class="label-value">Vue、jQuery/Spring、SpringBoot、SpringCloud</span></li>
