--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
                        <!-- <progress value="90" max="100"></progress> -->
                     </li>
                     <li>
-                        <label class="left-label"  title="技术拓展">技术引擎：</label>
+                        <label class="left-label"  >技术引擎：</label><span class="label-value">
 						Conference、HuggingFace、GitHub、StackOverFlow
+					</span>
                        <!-- <progress value="95" max="100"></progress> -->
                     </li>
                 </ul>
@@ -163,13 +164,13 @@
 						<h4>
 						论文（
 						<a href="https://github.com/splab-HRBUST/TR-CNN"  style="color:green;" target="_blank">
-						  <b>基于潮涌卷积神经网络的说话人确认代码</b>
+						  </b>基于潮涌卷积神经网络的说话人确认代码</b>
 						</a>
 						<span>&lt;电子与信息学报，审稿中&gt;</span>）
 						</h4>
-                        <p>本论文目的在于<b>设计一种潮涌卷积方法以模拟数字信号的交互行为，从而降低冗余参数，进一步通过ALL-Reduce加速。实验结果表明，与原始ECAPA-TDNN(C=512）相比，
-						在测试集Vox1-O、Vox1-E、Vox1-H上的EER分别相对降低了4.95%、4.03%和6.03%，MinDCF分别相对降低了31.55%、17.14%和17.42%，
-						参数量相对减少了约32.7%，计算量相对减少了23.5%。</b>
+                        <p>本论文目的在于<b>设计一种潮涌卷积方法以模拟数字信号的交互行为</b>，从而降低冗余参数，进一步通过<b>ALL-Reduce</b>加速。实验结果表明，与原始ECAPA-TDNN(C=512）相比，
+						在测试集Vox1-O、Vox1-E、Vox1-H上的EER分别相对<b>降低了4.95%、4.03%和6.03%</b>，MinDCF分别相对<b>降低了31.55%、17.14%和17.42%</b>，
+						参数量相对<b>减少了约32.7%</b>，计算量相对<b>减少了23.5%。</b>
 						</p>
                     </li>
                 </ul class="experience-list">
@@ -180,39 +181,33 @@
                 <ul class="experience-list">
 		   <li>
                         <h3 >医疗耗材 - SpringCloud</h3>
-                        <p>为了开发具有可用性、性能、安全性，并实现医药分离、零差价和精细化管理，故推出SPD平台。该平台三端通过MQ进行通信，具体如下：
-						 Supply端，以Redis缓存进行耗材/药品信息维护，减少IO;Process端，系统以Nginx处理静态资源，Tomcat处理动态资源，
-						 并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle。Distribution端，耗材/药品实时消耗采用消费者发送异步消息，
+                        <p>为了开发具有可用性、性能、安全性，并实现医药分离、零差价和精细化管理，故推出<b>SPD</b>平台。该平台三端通过MQ进行通信，具体如下：
+						 <b>Supply端</b>，以Redis缓存进行耗材/药品信息维护，减少IO;<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
+						 并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle。<b>Distribution端</b>，耗材/药品实时消耗采用消费者发送异步消息，
 						 不足则微信、短信进行预警。最后为Supply提供接口，为多个供应商提供支持。
 						</p>
                     </li>
             <li>
                         <h3>财务一体化 - SpringMvc</h3>
-                        <p>导入导出平台对EasyExcel技术进行百万级别数据的导出（30s）进行优化，
+                        <p>导入导出平台对<b>EasyExcel</b>技术进行百万级别数据的导出（30s）进行优化，
 						分批读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入（5s），同时采用自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
                         </p>
                     </li>
 			<li>
                         <h3 >电子商务支付 - SpringCloud</h3>
-                        <p>为了整合一码多联，故推出支付平台，年交易量达到2亿。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系、跨境支付等核心模块。
+                        <p>为了整合<b>一码多联/b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系、跨境支付等核心模块。
 						Nginx（过滤非法请求）、Redis（支付流水缓存）、RocketMQ（交易异步通知）、ElasticSearch（交易日志分析）。
 						</p>
-                    </li>
-			<li>
-                        <h3>基于Java的ICU重症监护系统</h3>
-                        <p>
-                            创业小组承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
-							对超出预期状况，通过ICU的外设红色提醒灯进行预警。
-                            <br/>
-                        </p>
                     </li>
                     <li>
                         <h3>小型系统集合 </h3>
                          <p>
-                            <b>第一</b>，以第一届创业小组名义，团队开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发；
-							<b>第二</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
+							<b>第一</b>，以第一届创业小组名义，团队开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发；
+                            <b>第二</b>，创业小组承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
+							对超出预期状况，通过ICU的外设红色提醒灯进行预警。
+							<b>第三</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
 							实现对婚纱的纵向管理即生命周期管理，横向管理即用户对婚纱的体验；
-                            <b>第三</b>，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
+                            <b>第四</b>，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
                             
                          </p>
                     </li>
