--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <hr>
                 <ul class="progress-list">
 				   <li>
-                        <label class="left-label" title="交流能力">交流：</label>跨部门协作、客户现场验收
+                        <label class="left-label" title="交流能力">交流：</label><b>跨部门协作、客户现场验收</b>
                        <!-- <progress value="95" max="100"></progress> -->
                     </li>
                     <li>
@@ -107,8 +107,8 @@
 				<h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
                 <hr>
                 <p>
-                    <b>注重动手能力，理论联系实践，兴趣驱使技术。</b>本科第一届创业小组组长，后从事后端开发类工作，再到神经网络研究。截止现在，已有八年后端开发经验，具有技术文档阅读能力
-					、面向对象开发思想和良好的代码规范，期间活跃在github和stackoverflow社区以寻找辅助当前场景的解决方案，遵循以人为本的敏捷开发。
+                    注重动手能力，理论联系实践，兴趣驱使技术。本科第一届创业小组组长，后从事后端开发类工作，再到神经网络研究。截止现在，已有八年后端开发经验，具有技术文档阅读能力
+					、面向对象开发思想和良好的代码规范，期间活跃在社区以寻找辅助当前场景的解决方案，遵循以人为本的敏捷开发。
                 </p>
                 <!--   <div class="VX">
                     <img src="static/image/weixin.png" alt="">
@@ -130,15 +130,15 @@
                     <li>
 		      <h3>哈尔滨理工大学 - 计算机科学与技术专业（研究生）2023-2026</h3>
                         <p>
-                           理解卷积神经网络（CNN）/图卷积神经网络（GCN）/多头注意力（Transformer），了解大模型（如WavLM、Deepseek、GPT-OSS、Gemini Pro、Claude）,了解知识库（ima、Notion）</b>
-						   <b>Function Calling/MCP协议，API调用模型，dify/coze</b></p>   
+                           <b>理解CNN/GCN/Transformer算法原理</b>，了解大模型（如<b>WavLM、Deepseek、GPT-OSS</b>、Gemini Pro、Claude）、知识库（ima、Notion），
+						   Function Calling/MCP协议，API调用模型，<b>Dify</b>/Coze</p>   
                     </li>
                 </ul>
 				<ul class="experience-list">
                     <li>
                         <h3>计算机基础</h3>
                         <p>
-                           <b>HTTP1.1/2.0（TCP、UDP）、JWT、JSONB、SQL优化、分布式、设计模式、Pycharm（开发、调试、AB测试），多种CLI（如Linux、Docker、Python、Java）</b></p>
+                           <b>HTTP1.1/2.0（TCP、UDP）、JWT、JSONB、设计模式、SQL优化、分布式、SDK（开发、调试、AB测试），多种CLI（如Linux、Docker、Python、Java）</b></p>
 							
                     </li>
                 </ul>
@@ -182,20 +182,20 @@
 		   <li>
                         <h3 >医疗耗材 - SpringCloud</h3>
                         <p>为了开发具有可用性、性能、安全性，并实现医药分离、零差价和精细化管理，故推出<b>SPD</b>平台。该平台三端通过MQ进行通信，具体如下：
-						 <b>Supply端</b>，以Redis缓存进行耗材/药品信息维护，减少IO;<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
-						 并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle。<b>Distribution端</b>，耗材/药品实时消耗采用消费者发送异步消息，
-						 不足则微信、短信进行预警。最后为Supply提供接口，为多个供应商提供支持。
+						 <b>Supply端</b>，以Redis缓存进行耗材/药品信息维护，减少IO；<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
+						 并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle；<b>Distribution端</b>，耗材/药品实时消耗采用消费者发送异步消息，
+						 不足则微信、短信进行预警。最后为Supply<b>提供接口</b>，为多个供应商提供支持。
 						</p>
                     </li>
             <li>
                         <h3>财务一体化 - SpringMvc</h3>
                         <p>导入导出平台对<b>EasyExcel</b>技术进行百万级别数据的导出（30s）进行优化，
-						分批读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入（5s），同时采用自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
+						分批读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入<b>（5s）</b>，同时采用自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
                         </p>
                     </li>
 			<li>
                         <h3 >电子商务支付 - SpringCloud</h3>
-                        <p>为了整合<b>一码多联/b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系、跨境支付等核心模块。
+                        <p>为了整合<b>一码多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系、跨境支付等核心模块。
 						Nginx（过滤非法请求）、Redis（支付流水缓存）、RocketMQ（交易异步通知）、ElasticSearch（交易日志分析）。
 						</p>
                     </li>
@@ -205,9 +205,9 @@
 							<b>第一</b>，以第一届创业小组名义，团队开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发；
                             <b>第二</b>，创业小组承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
 							对超出预期状况，通过ICU的外设红色提醒灯进行预警。
-							<b>第三</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
+							<b>第三</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，Mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
 							实现对婚纱的纵向管理即生命周期管理，横向管理即用户对婚纱的体验；
-                            <b>第四</b>，由百度贴吧产生构想，推出以SSM框架，mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
+                            <b>第四</b>，由百度贴吧产生构想，推出以SSM框架，Mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
                             
                          </p>
                     </li>
