--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
             </div>
 
-            <h1 id="username">仪志鑫</h1>
-            <h4 id="persona-tag"><b>大模型研发</b></h4>
+            <h1 id="persona-tag"><b>意向：大模型研发</b></h1>
+            <h2 id="username"><b>仪志鑫</b></h2>
         </div>
         <div class="profile info-unit">
             <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
@@ -44,42 +44,7 @@
                     <label class="left-label">专业</label><span class="label-value">计算机科学与技术</span></li>
             </ul>
         </div>
-        <div class="contact info-unit">
-            <h2 class="info-header"><i class="iconfont icon-call"></i> <span class="info-title">联系方式</span></h2>
-            <hr>
-            <ul class="info-list">
-                <li>
-                    <label class="left-label">手机</label><span class="label-value">17864090611</span></li>
-                <li>
-                    <label class="left-label">邮箱</label><span class="label-value">new961102@163.com</span></li>
-                <li>
-                    <label class="left-label">Github</label><span class="label-value" style="color:green;"
-                                                                  onclick="window.open('https://github.com/201512130144', '_blank')">
-						https://github.com/201512130144
-					</span></li>
-            </ul>
-        </div>
-        <div class="skill info-unit">
-            <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
-            <hr>
-            <ul class="progress-list">
-                <li>
-                    <label class="left-label" title="交流能力">交流：</label><b>跨部门协作、客户现场验收</b>
-                    <!-- <progress value="95" max="100"></progress> -->
-                </li>
-                <li>
-                    <label class="left-label" title="爱好">爱好：</label>徒步、打游戏、极限运动
-                    <!-- <progress value="90" max="100"></progress> -->
-                </li>
-                <li>
-                    <label class="left-label">技术引擎：</label><span class="label-value">
-						Conference、HuggingFace、GitHub、StackOverFlow
-					</span>
-                    <!-- <progress value="95" max="100"></progress> -->
-                </li>
-            </ul>
-        </div>
-        <div class="stack info-unit">
+		        <div class="stack info-unit">
             <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
             <hr>
             <ul class="stack-list">
@@ -106,19 +71,42 @@
                 </b>
             </ul>
         </div>
-
-        <div class="code info-unit">
-            <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
+        <div class="skill info-unit">
+            <h2 class="info-header"><i class="iconfont icon-star"></i> <span class="info-title">技能点</span></h2>
             <hr>
-            <p>
-                 <b>注重动手能力，理论联系实践，兴趣驱使技术 </b>。本科第一届创业小组组长，后从事后端开发类工作，再到神经网络研究。截止现在，已有八年后端开发经验，具有技术文档阅读能力
-                、面向对象开发思想和良好的代码规范，期间活跃在社区以寻找辅助当前场景的解决方案，遵循以人为本的敏捷开发。
-            </p>
-            <!--   <div class="VX">
-                <img src="static/image/weixin.png" alt="">
-
-            </div> -->
+            <ul class="progress-list">
+                <li>
+                    <label class="left-label" title="交流能力">交流：</label><b>跨部门协作、客户现场验收</b>
+                    <!-- <progress value="95" max="100"></progress> -->
+                </li>
+                <li>
+                    <label class="left-label" title="爱好">爱好：</label>徒步、打游戏、极限运动
+                    <!-- <progress value="90" max="100"></progress> -->
+                </li>
+                <li>
+                    <label class="left-label">技术引擎：</label><span class="label-value">
+						Conference、HuggingFace、GitHub、StackOverFlow
+					</span>
+                    <!-- <progress value="95" max="100"></progress> -->
+                </li>
+            </ul>
         </div>
+		  <div class="contact info-unit">
+            <h2 class="info-header"><i class="iconfont icon-call"></i> <span class="info-title">联系方式</span></h2>
+            <hr>
+            <ul class="info-list">
+                <li>
+                    <label class="left-label">手机</label><span class="label-value"><b>17864090611</b></span></li>
+                <li>
+                    <label class="left-label">邮箱</label><span class="label-value"><b>new961102@163.com</b></span></li>
+                <li>
+                    <label class="left-label">Github</label><span class="label-value" style="color:green;"
+                                                                  onclick="window.open('https://github.com/201512130144', '_blank')">
+						<b>https://github.com/201512130144</b>
+					</span></li>
+            </ul>
+        </div>
+		
         <!--   <div class="remodal remodal-img" data-remodal-id="weixin-modal">
                <h3>请输入图片URL地址：</h3>
                <br/>
@@ -136,8 +124,8 @@
                     <h3>哈尔滨理工大学 - 计算机科学与技术专业（研究生）2023-2026</h3>
                     <p>
                         <b>理解CNN/GCN/Transformer算法原理</b>，了解大模型（如<b>WavLM、Deepseek、GPT-OSS</b>、Gemini
-                        Pro、Claude）、知识库（ima、Notion），RAG，Fine-tune，
-                        Function Calling/MCP协议，API调用模型，<b>Dify</b>/Coze</p>
+                        Pro、Claude）、知识库（ima、Notion），<b>RAG，Fine-tune，
+                        Function Calling/MCP协议，Dify</b>/Coze</p>
                 </li>
             </ul>
             <ul class="experience-list">
@@ -162,17 +150,17 @@
             <hr>
             <ul class="experience-list">
                 <li>
-                    <h3>专利（CN118782049A，实审中）</h3>
+                    <h3><b>专利（CN118782049A，实审中）</b></h3>
                     <p>本发明目的在于设计一种基于时间序列的深层特征注意力方法以消除数字信号引起的特征模糊。
                     </p>
                 </li>
                 <li>
                     <h4>
-                        论文（
+                        <b>论文（
                         <a href="https://github.com/splab-HRBUST/TR-CNN" style="color:green;" target="_blank">
                             <b>基于潮涌卷积神经网络的说话人确认代码</b>
                         </a>
-                        <span>&lt;电子与信息学报，审稿中&gt;</span>）
+                        <span>&lt;电子与信息学报，审稿中&gt;</span>）</b>
                     </h4>
                     <p>本论文目的在于<b>设计一种潮涌卷积方法以模拟数字信号的交互行为</b>，从而降低冗余参数，进一步通过<b>ALL-Reduce</b>加速。实验结果表明，与原始ECAPA-TDNN(C=512）相比，
                         在测试集Vox1-O、Vox1-E、Vox1-H上的EER分别相对<b>降低了4.95%、4.03%和6.03%</b>，MinDCF分别相对<b>降低了31.55%、17.14%和17.42%</b>，
@@ -186,7 +174,7 @@
             <hr>
             <ul class="experience-list">
                 <li>
-                    <h3>医疗耗材 - SpringCloud</h3>
+                    <h3><b>医疗耗材 - SpringBoot</b></h3>
                     <p>为了开发具有可用性、性能、安全性，并实现医药分离、零差价和精细化管理，故推出<b>SPD</b>平台。该平台三端通过MQ进行通信，具体如下：
                         <b>Supply端</b>，以Redis缓存进行耗材/药品信息维护，减少IO；<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
                         并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle；<b>Distribution端</b>，耗材/药品实时消耗采用消费者发送异步消息，
@@ -194,13 +182,13 @@
                     </p>
                 </li>
                 <li>
-                    <h3>财务一体化 - SpringMvc</h3>
+                    <h3><b>财务一体化 - SpringMvc</b></h3>
                     <p>导入导出平台对<b>EasyExcel</b>技术进行百万级别数据的导出（30s）进行优化，
                         分批读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入<b>（5s）</b>，同时采用自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
                     </p>
                 </li>
                 <li>
-                    <h3>电子商务支付 - SpringCloud</h3>
+                    <h3><b>电子商务支付 - SpringCloud</b></h3>
                     <p>为了整合<b>一码多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系等核心模块。
                         Nginx（过滤非法请求）、Redis（支付流水缓存）、RocketMQ（交易异步通知）、ElasticSearch（交易日志分析）。
                     </p>
@@ -219,6 +207,18 @@
             </ul>
         </div>
         <div class="aboutme info-unit right-paragraph">
+		        <div class="code info-unit">
+            <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
+            <hr>
+            <p>
+                 <b>注重动手能力，理论联系实践，兴趣驱使技术 </b>。本科第一届创业小组组长，后从事后端开发类工作，再到神经网络研究，具有技术文档阅读能力
+                、面向对象开发思想和良好的代码规范，期间活跃在社区以寻找辅助当前场景的解决方案，遵循以人为本的敏捷开发。
+            </p>
+            <!--   <div class="VX">
+                <img src="static/image/weixin.png" alt="">
+
+            </div> -->
+        </div>
         </div>
     </div>
 </div>
