--- a/index.html
+++ b/index.html
@@ -189,19 +189,18 @@
                 </li>
                 <li>
                     <h3><b>电子商务支付 - SpringCloud</b></h3>
-                    <p>为了整合<b>一码多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系等核心模块。
+                    <p>为了整合<b>一码多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系等核心模块，具体
                         Nginx（过滤非法请求）、Redis（支付流水缓存）、RocketMQ（交易异步通知）、ElasticSearch（交易日志分析）。
                     </p>
                 </li>
                 <li>
                     <h3>小型系统集合 </h3>
                     <p>
-                        <b>第一</b>，以第一届创业小组名义，团队开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发；
-                        <b>第二</b>，创业小组承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
-                        对超出预期状况，通过ICU的外设红色提醒灯进行预警。
-                        <b>第三</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，Mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
+                        <b>第一</b>，以第一届创业小组开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发，
+						进一步承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
+                        <b>第二</b>，本科毕业设计采用ssm框架，log4j打印，c3p0连接池，MD5加密，Mysql持久化，RabbitMQ为中间件进行解耦、削峰及减轻数据库的压力，
                         实现对婚纱的纵向管理即生命周期管理，横向管理即用户对婚纱的体验；
-                        <b>第四</b>，由百度贴吧产生构想，推出以SSM框架，Mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
+                        <b>第三</b>，推出以SSM框架，Mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
                     </p>
                 </li>
             </ul>
