--- a/index_cande1.html
+++ b/index_cande1.html
@@ -106,13 +106,7 @@
 					</span></li>
             </ul>
         </div>
-		 <div class="contact info-unit">
-		  <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
-            <hr>
-            <p>
-                 <b>注重动手能力，理论联系实践，兴趣驱使技术 </b>，遵循以人为本的敏捷开发。
-            </p>
-		</div>
+		
         <!--   <div class="remodal remodal-img" data-remodal-id="weixin-modal">
                <h3>请输入图片URL地址：</h3>
                <br/>
@@ -213,7 +207,12 @@
         </div>
         <div class="aboutme info-unit right-paragraph">
 		        <div class="code info-unit">
-          
+            <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
+            <hr>
+            <p>
+                 <b>注重动手能力，理论联系实践，兴趣驱使技术 </b>。本科第一届创业小组组长，后从事后端开发类工作，再到神经网络研究，具有技术文档阅读能力
+                、面向对象开发思想和良好的代码规范，期间活跃在社区以寻找辅助当前场景的解决方案，遵循以人为本的敏捷开发。
+            </p>
             <!--   <div class="VX">
                 <img src="static/image/weixin.png" alt="">
 
