--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <li>
                     <label class="left-label">Github</label><span class="label-value" style="color:green;"
                                                                   onclick="window.open('https://github.com/201512130144', '_blank')">
-						<b>https://github.com/201512130144</b>
+						<b>hey，God</b>
 					</span></li>
             </ul>
         </div>
