--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         <label class="left-label" title="前-后端">前 - 后端</label><span class="label-value">Ajax/jQuery/Vue2 - SpringMVC/SpringBoot</span>
                     </li>
                     <li>
-                        <label class="left-label" title="数据库">数据库</label><span class="label-value">Mysql/Redis/Oracle/Elasticsearch</span>
+                        <label class="left-label" title="数据库">数据库</label><span class="label-value">Mysql/Redis/Oracle/ES</span>
                     </li>
                     <li>
-                        <label class="left-label" title="中间件">中间件</label><span class="label-value">Nginx/MQ/K8S/Docker/Tomcat</span>
+                        <label class="left-label" title="中间件">中间件</label><span class="label-value">Nginx/MQ/K8S/Docker</span>
                     </li>
                     <li>
                         <label class="left-label" title="中间件">项目管理</label><span class="label-value">Maven/Pip，Git/Svn</span>
