--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
                 <li>
                     <label class="left-label">邮箱</label><span class="label-value"><b>new961102@163.com</b></span></li>
                 <li>
-                    <label class="left-label">Github</label><span class="label-value" style="color:green;"
-                                                                  onclick="window.open('https://github.com/201512130144', '_blank')">
-						<b>hey，God</b>
-					</span></li>
+                    <label class="left-label">Github</label>
+						 <a href='https://github.com/201512130144' style="color:green;" target="_blank">
+                            <b>hey，God</b>
+                        </a>
+					</li>
             </ul>
         </div>
 		 <div class="contact info-unit">
