--- a/index_cande1.html
+++ b/index_cande1.html
@@ -99,11 +99,13 @@
                     <label class="left-label">手机</label><span class="label-value"><b>17864090611</b></span></li>
                 <li>
                     <label class="left-label">邮箱</label><span class="label-value"><b>new961102@163.com</b></span></li>
-                <li>
-                    <label class="left-label">Github</label><span class="label-value" style="color:green;"
-                                                                  onclick="window.open('https://github.com/201512130144', '_blank')">
-						<b>https://github.com/201512130144</b>
-					</span></li>
+                 <li>
+                    <label class="left-label">Github</label>
+						 <a href='https://github.com/201512130144' style="color:green;" target="_blank">
+                            <b>hey，God</b>
+                        </a>
+					</li>
+					
             </ul>
         </div>
 		
