--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 <body>
 <div class="container" id="cv">
     <div class="side">
-        <div class="me">
-            <div class="portrait"></div>
-            <div class="remodal remodal-img" data-remodal-id="portrait-modal">
-                <h3>请输入图片URL地址：</h3>
-                <br/>
-                <input type="text" id="avatar-url">
-                <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-            </div>
+	<div class="me">
+		<div class="portrait"></div>
+		<div class="remodal remodal-img" data-remodal-id="portrait-modal">
+			<h3>请输入图片URL地址：</h3>
+			<br/>
+			<input type="text" id="avatar-url">
+			<button data-remodal-action="confirm" class="remodal-confirm">确定</button>
+		</div>
 
-            <h1 id="persona-tag"><b>意向：大模型研发</b></h1>
-            <h2 id="username"><b>仪志鑫</b></h2>
-        </div>
-        <div class="profile info-unit">
+		<b><h1 id="persona-tag">意向：大模型研发</h1>
+		<h2 id="username">仪志鑫</h2></b>
+	</div>
+	<div class="profile info-unit">
             <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
             <hr>
             <ul class="info-list">
@@ -41,29 +41,29 @@
                 <li>
                     <label class="left-label">院校</label><span class="label-value">哈尔滨理工大学</span></li>
                 <li>
-                    <label class="left-label">专业</label><span class="label-value">计算机科学与技术</span></li>
+                    <label class="left-label">专业</label><span class="label-value" style="font-weight: bold;">计算机科学与技术</span></li>
             </ul>
         </div>
 		        <div class="stack info-unit">
-            <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">技术栈</span></h2>
+            <h2 class="info-header"><i class="iconfont icon-build"></i> <span class="info-title">个人优势</span></h2>
             <hr>
             <ul class="stack-list">
                 <b>
                     <li>
-                        <label class="left-label" title="人工智能">人工智能</label><span class="label-value">Model(CNN)/Loss(CE)</span>
+                        <label class="left-label" title="人工智能">模型训练</label><span class="label-value">监督/强化/蒸馏</span>
                     </li>
                     <li>
-                        <label class="left-label" title="语言">框架</label><span
-                            class="label-value">Spring/Pytorch</span>
+                        <label class="left-label" title="语言">工程</label><span
+                            class="label-value">二开Dify及多个落地项目</span>
+                    </li>
+                 <!--   <li>
+                        <label class="left-label" title="前-后端">前 - 后端</label><span class="label-value">next.js/Flask</span>
+                    </li> -->
+                    <li>
+                        <label class="left-label" title="数据库">数据库</label><span class="label-value" font-size="10px" >Redis/Mysql等/PGsql等</span>
                     </li>
                     <li>
-                        <label class="left-label" title="前-后端">前 - 后端</label><span class="label-value">Ajax/jQuery/Vue2 - SpringMVC/SpringBoot</span>
-                    </li>
-                    <li>
-                        <label class="left-label" title="数据库">数据库</label><span class="label-value">Mysql/Redis/Oracle/ES</span>
-                    </li>
-                    <li>
-                        <label class="left-label" title="中间件">中间件</label><span class="label-value">Nginx/MQ/K8S/Docker</span>
+                        <label class="left-label" title="中间件">中间件</label><span class="label-value">Nginx/MQ/K8S/Docker等</span>
                     </li>
                     <li>
                         <label class="left-label" title="中间件">项目管理</label><span class="label-value">Maven/Pip，Git/Svn</span>
@@ -76,16 +76,16 @@
             <hr>
             <ul class="progress-list">
                 <li>
-                    <label class="left-label" title="交流能力">交流：</label><b>跨部门协作、客户现场验收</b>
+                    <label class="left-label" title="交流能力">公司交流：</label><b>跨部门协作、客户现场验收</b>
                     <!-- <progress value="95" max="100"></progress> -->
                 </li>
                 <li>
-                    <label class="left-label" title="爱好">爱好：</label>徒步、打游戏、极限运动
+                    <label class="left-label" title="爱好">业余爱好：</label>徒步、打游戏、极限运动
                     <!-- <progress value="90" max="100"></progress> -->
                 </li>
                 <li>
-                    <label class="left-label">技术引擎：</label><span class="label-value">
-						Conference、HuggingFace、GitHub、StackOverFlow
+                    <label class="left-label">技术提升：</label><span class="label-value">
+						Paper、HuggingFace、GitHub、StackOverFlow
 					</span>
                     <!-- <progress value="95" max="100"></progress> -->
                 </li>
@@ -107,7 +107,7 @@
 					</li>
             </ul>
         </div>
-		 <div class="contact info-unit">
+		 <div class="comment info-unit">
 		  <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
             <hr>
             <p>
@@ -123,23 +123,32 @@
     </div>
     <div class="main">
         <div class="education info-unit right-list">
+			<div class="header">
+		
             <h2 class="info-header"><i class="iconfont icon-education"></i> <span class="info-title">教育经历</span>
             </h2>
+			<a class="github" style="color:green;" href="https://201512130144.github.io/" target="_blank">最新简历获取</a>
+			</div>
             <hr>
             <ul class="experience-list">
                 <li>
                     <h3>哈尔滨理工大学 - 计算机科学与技术专业（研究生）2023-2026</h3>
                     <p>
-                        <b>理解CNN/GCN/Transformer算法原理</b>，了解大模型（如<b>WavLM、Deepseek、GPT-OSS</b>、Gemini
-                        Pro、Claude）、知识库（ima、Notion），<b>RAG，Fine-tune，
-                        Function Calling/MCP协议，Dify</b>/Coze</p>
+                        <b>理解CNN/GCN/Transforme、STFT、数据并行/模型并行，
+						具备生成式AI技术实践：RAG、Fine-tune、Lora、
+                        Function Calling/MCP，熟悉WavLM/Deepseek/GPT-OSS/Claude</b>
+						</p>
                 </li>
             </ul>
             <ul class="experience-list">
                 <li>
-                    <h3>计算机基础</h3>
+                    <h3>相关能力</h3>
                     <p>
-                        <b>HTTP1.1/2.0（TCP、UDP）、JWT、JSONB、设计模式、SQL优化、分布式、SDK（开发、调试、AB测试），多种CLI（如Linux、Docker、Python、Java）</b>
+                        <b>熟悉数据结构与复杂度分析，掌握段页式内存管理及页面置换策略，具备线程池/连接池优化经验，理解程序语言的解释与编译过程，
+						熟悉TCP/UDP,Get/Post,JWT、Protobuf、JsonB等，
+						熟悉常用设计模式、自定义注解、旁路缓存、SQL优化与事务隔离级别，
+						熟悉DB、MQ、Pytorch/Spring、JS/CSS，
+						熟练SDK（开发、调试），常用Cli（如Linux/Docker/Git/Nodejs/RESTful API)</b>
                     </p>
                 </li>
             </ul>
@@ -147,7 +156,7 @@
                 <li>
                     <h3>相关荣誉/证书</h3>
                     <p>
-                        <b>2023-2024：研究生学业二等奖学金；21年优秀员工；22年任项目组长；英语四级；C语言二级；系统架构设计师：45，46，39（24上半年）</b>
+                        <b>2023-2024：22年任项目组长；21年优秀员工；研究生学业二等奖学金；英语四级；C语言二级；系统架构设计师：45，46，39（24上半年）</b>
                     </p>
                 </li>
             </ul>
@@ -156,9 +165,16 @@
             <h2 class="info-header"><i class="iconfont icon-work"></i> <span class="info-title">成果</span></h2>
             <hr>
             <ul class="experience-list">
+			    <li>
+                    <h4><b>软著（2024SR0954862，声纹欺诈识别系统V1.0）</b></h4>
+                    <p>
+					<b>目的在于开发一种声纹欺诈检测与身份识别系统以有效提升识别准确率与系统安全性。</b>
+                    </p>
+                </li>
                 <li>
-                    <h3><b>专利（CN118782049A，实审中）</b></h3>
-                    <p>本发明目的在于设计一种基于时间序列的深层特征注意力方法以消除数字信号引起的特征模糊。
+                    <h4><b>专利（CN118782049A，实审中）</b></h4>
+                    <p>
+					<b>目的在于设计一种基于时序的深层特征注意力方法以消除数字信号引起的特征模糊。</b>
                     </p>
                 </li>
                 <li>
@@ -167,11 +183,12 @@
                         <a href="https://github.com/splab-HRBUST/TR-CNN" style="color:green;" target="_blank">
                             <b>基于潮涌卷积神经网络的说话人确认代码</b>
                         </a>
-                        <span>&lt;电子与信息学报，审稿中&gt;</span>）</b>
+                        <span>&lt;电子与信息学报，小修&gt;</span>）</b>
                     </h4>
-                    <p>本论文目的在于<b>设计一种潮涌卷积方法以模拟数字信号的交互行为</b>，从而降低冗余参数，进一步通过<b>ALL-Reduce</b>加速。实验结果表明，与原始ECAPA-TDNN(C=512）相比，
+                    <p font="5px">本论文目的在于<b>设计一种插值和感受野（类比潮涌）可变的方法以模拟数字信号的交互行为</b>，采用<b>Ring ALL-Reduce</b>加速，
+					从而训练时间简短、性能提高且参数和计算量大幅度降低。实验结果表明，与ECAPA-TDNN(C=512）相比，
                         在测试集Vox1-O、Vox1-E、Vox1-H上的EER分别相对<b>降低了4.95%、4.03%和6.03%</b>，MinDCF分别相对<b>降低了31.55%、17.14%和17.42%</b>，
-                        参数量相对<b>减少了约32.7%</b>，计算量相对<b>减少了23.5%。</b>
+                        参数量与计算量分别相对<b>减少了32.7%、23.5%。</b>
                     </p>
                 </li>
             </ul>
@@ -180,28 +197,44 @@
             <h2 class="info-header"><i class="iconfont icon-project"></i> <span class="info-title">项目经历</span></h2>
             <hr>
             <ul class="experience-list">
+			    <li>
+                    <h4><b>Agent/工作流/Chat - Dify二次开发</b></h4>
+                    <p>
+					<b>设计Prompt+Celery+RabbitMQ+Redis的微服务异步任务治理体系</b>。通过RabbitMQ的优先级队列、死信队列等高级特性，
+					实现了任务的<b>多级调度与故障恢复</b>，保障了请求的低延迟（<b>500ms</b>），系统资源利用率提升</b>40%</b>。
+					引入<b>gRPC+Protobuf</b>替代JSON，支撑分布式并行推理与多智能体协作，显著降低序列化/反序列化开销。
+					基于<b>MCP协议设计智能体开发底座</b>，<b>将数据、工具与模型能力标准化暴露</b>，
+					构建用户自然语言问题、结构化Prompt、大模型推理这个流程做成一个<b>知识库驱动的智能提示（Prompt）</b>。
+					构建<b>NIO+TCP长连接</b>的高性能网关，</>减少<b>35%</b>连接建立开销，采用<b>流式输出在线对话与实时推理</b>。
+					设计Python注解+SQLAlchemy事件<b>钩子处理自定义的业务规则校验</b>，满足不同场景下的灵活存储（<b>CP</b>）。
+					在<b>说话人识别任务上</b>，采用模型优化（<b>ETL、SFT、RLHF、损失</b>），准确率<b>相对提升18%</b>。
+					引入安全体系（JWT、签名校验），并采用Nginx反向代理、RabbitMQ的优先队列和Redis的Pub/Sub实现任务状态与事件广播
+					<b>稳定支撑千级QPS每日调用量的API服务</b>，提供<b>毫秒级交互体验</b>。
+					
+					</p>
+                </li>
                 <li>
-                    <h3><b>医疗耗材 - SpringBoot</b></h3>
-                    <p>为了开发具有可用性、性能、安全性，并实现医药分离、零差价和精细化管理，故推出<b>SPD</b>平台。该平台三端通过MQ进行通信，具体如下：
-                        <b>Supply端</b>，以Redis缓存进行耗材/药品信息维护，减少IO；<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
-                        并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle；<b>Distribution端</b>，耗材/药品实时消耗采用消费者发送异步消息，
-                        不足则微信、短信进行预警。最后为Supply<b>提供接口</b>，为多个供应商提供支持。
+                    <h4><b>分布式SPD - SpringBoot</b></h4>
+                    <p>针对多个三甲医院的物资/耗材，设计具有可用性、性能、安全性，并实现医药分离、零差价和精细化，推出<b>SPD</b>平台。该平台三端通过RabbitMQ进行通信，具体如下：
+                        <b>Supply端</b>，以Redis缓存耗材/药品信息，减少大批量的IO；<b>Process端</b>，系统以Nginx处理静态资源，Tomcat处理动态资源，
+                        并加盐对耗材/药品产生唯一码，使用订阅发布来保证实时性，使用日志异步持久化到Oracle；<b>Distribution端</b>，耗材/药品实时消耗采用广播，
+                        不足则通过微信、短信预警。Supply端<b>提供Json格式接口</b>，为多个供应商提供支持。
                     </p>
                 </li>
                 <li>
-                    <h3><b>财务一体化 - SpringMvc</b></h3>
-                    <p>导入导出平台对<b>EasyExcel</b>技术进行百万级别数据的导出（30s）进行优化，
-                        分批读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入<b>（5s）</b>，同时采用自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护。
+                    <h4><b>历史数据导入/导出 - SpringMvc</b></h4>
+                    <p>针对某高校的导入导出财务平台，采用<b>EasyExcel</b>技术进行百万级别数据的导出（30s）进行优化，
+                        分批（硬盘存储块大小）读取+JDBC分批插入+批量事务操作来实现百万数据的流式导入<b>（5s）</b>，同时采用<b>自定义注解来对工作流财务报销、项目申报等模块进行开发及个性化需求维护</b>。
                     </p>
                 </li>
                 <li>
-                    <h3><b>电子商务支付 - SpringCloud</b></h3>
-                    <p>为了整合<b>一码多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。对应多个第三方支付接口（微信/支付宝/银联），熟悉支付结算、风控体系等核心模块，具体
+                    <h4><b>电子商务支付 - SpringCloud</b></h4>
+                    <p>针对小商户群体的支付业务，整合<b>一码（QR码）多联</b>，故推出支付平台，年交易量达到<b>2亿</b>。统一管理第三方支付接口（微信/支付宝/银联），平台<b>具备支付结算、风控体系</b>等核心模块，具体
                         Nginx（过滤非法请求）、Redis（支付流水缓存）、RocketMQ（交易异步通知）、ElasticSearch（交易日志分析）。
                     </p>
                 </li>
-                <li>
-                    <h3>小型系统集合 </h3>
+                <!-- <li>
+                    <h4>小型系统集合 </h4>
                     <p>
                         <b>第一</b>，以第一届创业小组开发了第一个以springMvc为核心的人力管理系统，我负责框架的搭建及工作流开发，
 						进一步承担某市立医院的ICU系统开发，主要工作以锐浪报表来呈现出病人病史、医疗状况、恢复情况，并以病历模板形式给出治疗建议。
@@ -210,11 +243,11 @@
                         <b>第三</b>，推出以SSM框架，Mysql数据库为支撑的校内论坛式APP（注册人数200+）进行线上阅览，线下交易。
                     </p>
                 </li>
+				-->
             </ul>
         </div>
-        <div class="aboutme info-unit right-paragraph">
-		        <div class="code info-unit">
-          
+    <div class="aboutme info-unit right-paragraph">
+		<div class="code info-unit">
             <!--   <div class="VX">
                 <img src="static/image/weixin.png" alt="">
 
