大模型简历-1

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<button data-remodal-action="confirm" class="remodal-confirm">确定</button>
 		</div>
 
-		<b><h1 id="persona-tag">意向：大模型研发</h1>
+		<b><h1 id="persona-tag">意向职位：AI研发</h1>
 		<h2 id="username">仪志鑫</h2></b>
 	</div>
 	<div class="profile info-unit">
