--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>新年烟花</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="static/favicon.ico">
         <link rel="stylesheet" href="static/css/style.css">
     </head>
 
     <body onselectstart="return false">
+		<div class="wrapper">
         <!-- 消息提示 -->
         <div class="message">
             <p>请单击屏幕开启背景音乐</p>
@@ -29,17 +30,38 @@
 
         <!-- 自定义内容弹窗 -->
         <div style="display: none">
-            <div class="shape">🏮2026新年快乐🏮</div>
-            <div class="shape">🏮恭喜发财🏮</div>
+            <div class="shape">🏮情人节快乐🏮</div>
+			<div class="shape">😸宝宝王慧宁😸</div>
+			<div class="shape">❤️情人节快乐❤️</div>
+			<div class="shape">🐻最帅的仪志鑫🐻</div>
+			<div class="shape">💕爱意绵长💕</div>
+			<div class="shape">💖爱如星火💖</div>
+			<div class="shape">🌹情人节快乐🌹</div>
+			<div class="shape">🌹两情相悦🌹</div>
+			<div class="shape">🌹执手此生🌹</div>
+			<div class="shape">🌹温柔以待🌹</div>
+			<div class="shape">✨爱如星火✨</div>
+			<div class="shape">🌟与你同光🌟</div>
+			<div class="shape">🌙心动无限🌙</div>
+			<div class="shape">💫银河作证💫</div>
+			<div class="shape">🧸甜甜蜜蜜🧸</div>
+
+
+
+
+
+
+        <!--      <div class="shape">🏮恭喜发财🏮</div>
             <div class="shape">🏮万事如意🏮</div>
             <div class="shape">🏮吉庆有余🏮</div>
             <div class="shape">🏮心想事成🏮</div>
             <div class="shape">🏮喜气盈门🏮</div>
             <div class="shape">🏮阖家欢乐🏮</div>
-            <div class="shape">🏮财源广进🏮</div>
+            <div class="shape">🏮财源广进🏮</div>-->
         </div>
 
         <script src="static/js/main.js"></script>
+		</div>
     </body>
 
 </html>
